salesforce/force-app/main/default/objects/Channel__c/Channel__c.object-meta.xml
<CustomObject>
    <description>A WhatsApp channel/number served by the heydoot engine. Maps a Salesforce routing unit (org/team/agent) to one heydoot channel.</description>
    <label>WhatsApp Channel</label>
    <pluralLabel>WhatsApp Channels</pluralLabel>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>