salesforce/force-app/main/default/objects/Channel__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Whether this channel is available for routing/sending.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>