salesforce/force-app/main/default/objects/Channel__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <label>Assigned Agent</label>
    <description>Default agent that owns conversations on this channel (used when Scope = Agent).</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>MaxDoot Channels</relationshipLabel>
    <relationshipName>MaxDoot_Channels</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>