salesforce/force-app/main/default/objects/Channel__c/fields/Bearer_Token__c.field-meta.xml
<CustomField>
    <fullName>Bearer_Token__c</fullName>
    <label>Bearer Token</label>
    <description>Per-number heydoot API bearer token. The token identifies which WhatsApp number/session this channel sends from. SENSITIVE: protect with FLS; consider Shield encryption or migrating to a per-channel Named Credential for production.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>