salesforce/force-app/main/default/objects/Channel__c/fields/Heydoot_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Heydoot_Channel_Id__c</fullName>
    <label>heydoot Channel Id</label>
    <description>Identifier of the corresponding channel/session in the heydoot engine.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>