salesforce/force-app/main/default/objects/Channel__c/fields/Iframe_QR_URL__c.field-meta.xml
<CustomField>
    <fullName>Iframe_QR_URL__c</fullName>
    <label>QR Login URL (iframe)</label>
    <description>Optional. If heydoot exposes its login/QR page as an embeddable URL, set it here to render the QR inside Salesforce via iframe. The domain must be added to CSP Trusted Sites (frame-src). If blank, MaxDoot falls back to the QR API path.</description>
    <type>Url</type>
</CustomField>