salesforce/force-app/main/default/objects/Channel__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <description>Routing scope for this channel: org-wide, a team, or a single agent.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Org</fullName>
                <default>true</default>
                <label>Org</label>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>