salesforce/force-app/main/default/objects/Channel__c/fields/Session_Status__c.field-meta.xml
<CustomField>
    <fullName>Session_Status__c</fullName>
    <label>Session Status</label>
    <description>Current WhatsApp session status reported by heydoot.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NeedsScan</fullName>
                <default>true</default>
                <label>Needs Scan</label>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>