salesforce/force-app/main/default/objects/Channel__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <description>Team name that owns conversations on this channel (used when Scope = Team).</description>
    <type>Text</type>
    <length>120</length>
</CustomField>