salesforce/force-app/main/default/objects/Channel__c/fields/WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Number__c</fullName>
    <label>WhatsApp Number</label>
    <description>The WhatsApp phone number (E.164) bound to this channel.</description>
    <type>Phone</type>
</CustomField>